overflow table fix

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -111,13 +111,14 @@ main{
   display: flex;
   justify-content: space-between;
   margin-bottom: 5rem;
-  @media (max-width: 54em){
+  @media (max-width: 59em){
     flex-direction: column;
   }
 }
+
 .chart-cell{
   width: 48%;
-  @media (max-width: 54em){
+  @media (max-width: 59em){
     width: 100%;
     margin-bottom: 3rem;
   }
