--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -45,7 +45,6 @@
 
 
 
-
 .pay-table{
     border-collapse: collapse;
     width: 100%;
@@ -55,6 +54,7 @@
 
     .tbody{
         overflow-y: auto;
+        overflow-x: hidden;
         height: 300px;
     }
 
